New ship editor - modules done